scss/style.scss
// import files
@import "import";

/* GENERAL STYLES
-------------------------------------------------*/

body {
  background: $white;
}
.card {
  min-width: 100%;
}

#toolbar-bar {
  &.toolbar-bar {
    z-index: 2000;
  }
  margin-top: 99px;
}

.ui-front {
  //@ see .affix
  z-index: 2001 !important;
}

/* animate underline except for navbar-brand */
#page-wrapper {
  .card-masonry-wrapper {
    height:fit-content;
  }
  .fixed-top {
    /* avoid Mirador's z-index */
    z-index: 1110;
  }
  min-height: 100vh;
  height: 100%;
  display: flex;
  flex-direction: column;
  #page {
    min-height: 100vh;
    height: 100%;
    display: flex;
    flex-direction: column;
    transition: padding-left 0.2s ease-out;
  }

  /* Drupal specifics */
  .block-page-title-block {
    padding-top: map-get($spacers, 4);
  }
  .field-content {
    dl:first-of-type {
      margin-top: 1rem;
    }
  }
  .feed-icons {
    display: none;
  }
  /* End Drupal specifics */
  a.highlighted_pumpkin {
    &:hover {
      color: $primary-shade;
      text-decoration: none;
    }
    div.highlighted_pumpkin_outer_wrapper {
      outline-width: 0;
      outline-style: solid;
      outline-color: $fifth-shade;
      transition: background-color .3s ease-out;
      div.highlighted_pumpkin_description {
        &.col-12 {
          height: 10rem;
          padding: 1rem 2rem;
        }
        height: 20rem;
        outline-width: 1px;
        outline-style: solid;
        outline-color: $fifth-shade;
        padding: 2rem 2rem;
      }
      div.highlighted_pumpkin_image_wrapper {
        &.col-12 {
          .highlighted_pumpkin_image {
            height: 10rem;
          }
        }
        .highlighted_pumpkin_image {
          overflow: hidden;
          width:100%;
          height:20rem;
        }
        img {
          width: 100%;
          height: 100%;
          object-fit: cover;
          // position: absolute;
          // top: 0; right: 0; bottom: 0; left: 0;
          transition: transform 0.2s ease-out;
          transform: scale(1.1);
        }
      }
      &:hover {
        outline-width: 0.5rem;
        outline-color: $fifth-shade;
        background-color: $fifth-shade !important;
        div.highlighted_pumpkin_image_wrapper {
          background-color: $fifth-shade !important;
          img {
            transform: scale(1);
          }
        }
      }
    }
  }

  /* DCMNY highlights */

}
/* End DCMNY highlights */

a:not(.navbar-brand) {
  text-decoration-color: black;
  text-decoration-skip-ink: auto;
  &:hover {
    text-decoration-color: $accent-shade;
    text-decoration-style: solid;
    text-decoration-thickness: 3px;
  }
}

a.nav-link, li.dropdown-item a {
  position: relative;
  text-decoration: none;
  &:before {
    content: "";
    position: absolute;
    display: block;
    width: 100%;
    height: 3px;
    bottom: 0;
    left: 0;
    background-color: $accent-shade;
    transform: scaleX(0);
    transform-origin: bottom left;
    transition: transform 0.2s ease-out;
  }
  &:hover {
    text-decoration: none;
    &:before {
      transform: scaleX(1);
    }
  }
}
/* Exception for dropdowns so they are fully clickable */
li.dropdown-item a {
  display: inline-block;
}



/* COLORS
--------------------------------------------------*/
.bg-inverse {
  background: $primary-shade !important;
}

#main-wrapper {
  padding-bottom: map-get($spacers, 4) * 2;
}

#NavbarTopWrapper, #NavbarWrapper {
  flex-basis: auto;
  flex-grow: 1;
  display: flex;
}

#NavbarWrapper {
  .nav-link {
    --bs-nav-link-color: white;
    --bs-nav-link-hover-color: white;
    --bs-nav-link-font-weight: 300;
  }
}

.site-footer {
  .block-menu a.nav-link {
    color: whitesmoke;
    &:hover {
    color:white;
  }
    width: fit-content;
  }
  display: flex;
  flex-flow: column;
  position: relative;
  height: 20rem;
  // See page-wrapper is flex this will push it to the end
  margin-top: auto;
  width: 100%;
  padding: 2rem 1rem;
  background: url("../images/M-patter-DCMNY-Purple-repeat.png"), $quaternary-shade;
  background-repeat: repeat;
  background-position-x: 0;
  background-position-y: 0;
  background-size: 6rem auto;
}

.site-footer__bottom {
  background: $gray-400 !important;
  color: $gray-100;
  .block {
    margin: 0 0;
  }
  .content {
    padding: 0 0;
    margin-top: 0;
  }
  .bottom-bit {
    margin: 3%;
    p {
      margin-top: 0.5rem;
    }
  }
  .footer-nav {
    min-height:40px;
    >a {
      padding-left: 1rem !important;
      border-left: 1px solid #9ea2a2;
      margin-left: 1rem;
    }
  }
}



.slick {
  width: 100%;
}

.slick > div {
  margin: 0 15px;
}

.dropdown-menu {
  --bs-dropdown-zindex: 9999 !important;
  border: none;
}

/* dcmny hide Form labels for exposed form Elements */
.views-exposed-form {
  label {
    @extend .invisible;
  }
}

@include media-breakpoint-up(xs) {
  #content.main-content {
    .block-facets-summary, .views-element-container {
      margin-left: auto;
    }
  }
  /* dcmny Front Page Panel Menu Under search Box */
  .toolbar-fixed {
    .ui-front {
      z-index:1200
    }
  }
}
/* ... */

